# ncnn_llm-android-ctl-mcp

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/workflows/: android-ci.yml
_ncnn_extract/ncnn-20250916-android-vulkan-shared/riscv64/lib/cmake/ncnn/: ncnnConfig.cmake
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ncnn_llm_jni.cpp
app/src/main/java/com/example/ncnn_llm_ctl/: AccessCtlService.java  AccessibilityToolBridge.java  ChatClient.java  JavaMcpTools.java  MainActivity.java  ModelDownloader.java  NcnnLlmBridge.java  NcnnLlmLocal.java  NcnnLlmSession.java  ToolTraceFormatter.java  WebAssetDeployer.java
app/src/main/res/drawable/: overlay_bubble_bg.xml  overlay_bubble_text_bg.xml  overlay_panel_bg.xml
app/src/main/res/layout/: activity_main.xml  overlay_bubble.xml  overlay_panel.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
